--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <br />
         <div class="col">
           <a
-            href="https://www.tiktok.com/@nintysix2025?_r=1&_t=ZS-92H0tUCxdEg"
+            href="https://www.google.com/maps?q=30.71616554260254,31.253597259521484&z=17&hl=en"
           >
             <pre><i class="fa-solid fa-location-dot"></i>          location          <span>>>></span></pre>
           </a>
