--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/nornalize.css" />
 
-    <title>96 speciality coffee</title>
+    <title>مرجان للمأكولات البحرية</title>
 
     <!-- الفووووونت  -->
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="logo"><img src="image/logo.jpg" alt="" /></div>
         <div class="name">
-          <h1><span>96 speciality coffee    </span></h1>
+          <h1><span>مرجان       </span></h1>
         </div>
       </div>
     </div>
@@ -37,26 +37,26 @@
       <div class="container">
         <div class="image"><img src="image/caram.jpg" alt="" /></div>
         <div class="text">
-          <span>  96   speciality   coffee    </span>
+          <span> مرجان للمأكولات البحرية       </span>
           <!-- <p>#كلاش_ميتوصاش</p> -->
         </div>
         <div class="icon">
 
-          <a href="https://www.tiktok.com/@nintysix2025?_r=1&_t=ZS-92H0tUCxdEg"
+          <!-- <a href="https://www.tiktok.com/@nintysix2025?_r=1&_t=ZS-92H0tUCxdEg"
           ><i class="fa-brands fa-tiktok"></i
-            ></a>
+            ></a> -->
 
-            <a href="https://www.instagram.com/nintysix2025?igsh=Ynd0ZmM2bjYxbm42"
+            <!-- <a href="https://www.instagram.com/nintysix2025?igsh=Ynd0ZmM2bjYxbm42"
             ><i class="fa-brands fa-instagram"></i
-              ></a>
-              <a href="https://api.whatsapp.com/send?phone=201009260826"
+              ></a> -->
+              <a href="https://api.whatsapp.com/send?phone=201503333231"
               ><i class="fab fa-whatsapp"></i
                 ></a>
                 <a
-                href="https://www.facebook.com/96specialitycoffee?mibextid=wwXIfr&rdid=ULpEXVFbeigR1HmS&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F16sgpzfNP8%2F%3Fmibextid%3DwwXIfr#"
+                href="https://www.facebook.com/share/17LCiTmeAr/"
                 ><i class="fa-brands fa-facebook"></i
                   ></a>
-                  <a href="tel:01009260826"><i class="fa-solid fa-phone"></i></a>
+                  <a href="tel:01557018815"><i class="fa-solid fa-phone"></i></a>
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
         <br />
         <div class="col">
           <a
-            href="https://www.google.com/maps?q=30.71616554260254,31.253597259521484&z=17&hl=en"
+            href="https://maps.app.goo.gl/wB5XB85o8MkiybpV8"
           >
             <pre><i class="fa-solid fa-location-dot"></i>          location          <span>>>></span></pre>
           </a>
