--- a/offers/offers.html
+++ b/offers/offers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> 96 speciality coffee  >> offers</title>
+    <title>مرجان للمأكولات البحرية >> offers</title>
 
     <link rel="stylesheet" href="all.min.css" />
     <link rel="stylesheet" href="offers.css" />
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="logo"><img src="../image/logo.jpg" alt="" /></div>
         <div class="name">
-         <h1>    96 speciality coffee  </h1>
+         <h1>   مرجان    </h1>
         </div>
       </div>
     </div>
