--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>96 speciality coffee >> menu</title>
+  <title>مرجان للمأكولات البحرية >> menu</title>
 
   <link rel="stylesheet" href="all.min.css" />
   <link rel="stylesheet" href="menu.css" />
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="logo"><img src="../image/logo.jpg" alt="" /></div>
       <div class="name">
-        <h1><span> 96 speciality coffee </span> </h1>
+        <h1><span> مرجان     </span> </h1>
       </div>
     </div>
   </div>
@@ -38,23 +38,8 @@
     <div class="container">
       <img src="image/1 (1).jpg" alt="">
       <img src="image/1 (2).jpg" alt="">
-      <img src="image/1 (3).jpg" alt="">
-      <img src="image/1 (4).jpg" alt="">
-      <img src="image/1 (5).jpg" alt="">
-      <img src="image/1 (6).jpg" alt="">
-      <img src="image/1 (7).jpg" alt="">
-      <img src="image/1 (8).jpg" alt="">
-      <img src="image/1 (9).jpg" alt="">
-      <img src="image/1 (10).jpg" alt="">
-      <img src="image/1 (11).jpg" alt="">
-      <img src="image/1 (12).jpg" alt="">
-      <img src="image/1 (13).jpg" alt="">
-      <img src="image/1 (14).jpg" alt="">
-      <img src="image/1 (15).jpg" alt="">
-      <img src="image/1 (16).jpg" alt="">
-      <img src="image/1 (17).jpg" alt="">
-      <img src="image/1 (18).jpg" alt="">
-     
+
+
 
 
 
@@ -70,7 +55,7 @@
 
       <div class="text">لطلب اوردر </div>
 
-      <a href="https://api.whatsapp.com/send?phone=201009260826">اضغط هناااا</a>
+      <a href="https://api.whatsapp.com/send?phone=201503333231">اضغط هناااا</a>
     </form>
 
   </div>
