--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/nornalize.css" />
 
-    <title>مرجان للمأكولات البحرية</title>
+    <title>كشري وكريب افندينا     </title>
 
     <!-- الفووووونت  -->
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
@@ -24,9 +24,9 @@
     <!--start header-->
     <div class="header">
       <div class="container">
-        <div class="logo"><img src="image/logo.jpg" alt="" /></div>
+        <div class="logo"><img src="image/logo.jpeg" alt="" /></div>
         <div class="name">
-          <h1><span>مرجان       </span></h1>
+          <h1><span>    افندينا        </span></h1>
         </div>
       </div>
     </div>
@@ -35,28 +35,28 @@
     <!--start  profile-->
     <div class="profile">
       <div class="container">
-        <div class="image"><img src="image/caram.jpg" alt="" /></div>
+        <div class="image"><img src="image/caram.jpeg" alt="" /></div>
         <div class="text">
-          <span> مرجان للمأكولات البحرية       </span>
+          <span> كشري وكريب افندينا      </span>
           <!-- <p>#كلاش_ميتوصاش</p> -->
         </div>
         <div class="icon">
 
-          <!-- <a href="https://www.tiktok.com/@nintysix2025?_r=1&_t=ZS-92H0tUCxdEg"
+          <a href="https://vm.tiktok.com/ZSHThqNWx7cu1-upN8Q/"
           ><i class="fa-brands fa-tiktok"></i
-            ></a> -->
-
-            <!-- <a href="https://www.instagram.com/nintysix2025?igsh=Ynd0ZmM2bjYxbm42"
+            ></a>
+ <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=10r22gxw"
             ><i class="fa-brands fa-instagram"></i
-              ></a> -->
+              ></a>
+
               <a href="https://api.whatsapp.com/send?phone=201503333231"
               ><i class="fab fa-whatsapp"></i
                 ></a>
                 <a
-                href="https://www.facebook.com/share/17LCiTmeAr/"
+                href="https://www.facebook.com/profile.php?id=201091858436"
                 ><i class="fa-brands fa-facebook"></i
                   ></a>
-                  <a href="tel:01557018815"><i class="fa-solid fa-phone"></i></a>
+                  <a href="tel:01091858436"><i class="fa-solid fa-phone"></i></a>
         </div>
       </div>
     </div>
