--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>مرجان للمأكولات البحرية >> menu</title>
+  <title> كشري وكريب افندينا      >> menu</title>
 
   <link rel="stylesheet" href="all.min.css" />
   <link rel="stylesheet" href="menu.css" />
@@ -17,9 +17,9 @@
   <!--start header-->
   <div class="header">
     <div class="container">
-      <div class="logo"><img src="../image/logo.jpg" alt="" /></div>
+      <div class="logo"><img src="../image/logo.jpeg" alt="" /></div>
       <div class="name">
-        <h1><span> مرجان     </span> </h1>
+        <h1><span>        افندينا     </span> </h1>
       </div>
     </div>
   </div>
@@ -36,8 +36,8 @@
 
   <div class="menu">
     <div class="container">
-      <img src="image/1 (1).jpg" alt="">
-      <img src="image/1 (2).jpg" alt="">
+      <img src="image/1 (1).jpeg" alt="">
+      <img src="image/1 (2).jpeg" alt="">
 
 
 
@@ -55,7 +55,7 @@
 
       <div class="text">لطلب اوردر </div>
 
-      <a href="https://api.whatsapp.com/send?phone=201503333231">اضغط هناااا</a>
+      <a href="https://api.whatsapp.com/send?phone=201091858436">اضغط هناااا</a>
     </form>
 
   </div>
