--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <br />
         <div class="col">
           <a
-            href="https://maps.app.goo.gl/wB5XB85o8MkiybpV8"
+            href="https://www.google.com/maps?q=30.1417709,31.3301603&z=17&hl=en"
           >
             <pre><i class="fa-solid fa-location-dot"></i>          location          <span>>>></span></pre>
           </a>
