--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <br />
         <div class="col">
           <a
-            href="https://maps.app.goo.gl/b7pjJ8mDYPsm7cfS8"
+            href="https://www.google.com/maps/place/30%C2%B008'30.8%22N+31%C2%B019'48.2%22E/@30.1418928,31.3274848,17z/data=!3m1!4b1!4m4!3m3!8m2!3d30.1418928!4d31.3300597?hl=en&entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
           >
             <pre><i class="fa-solid fa-location-dot"></i>          location          <span>>>></span></pre>
           </a>
