--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
 
         </div> -->
-        <br>
-                    <!-- <div class="col  offers">
+        <!-- <br> -->
+                    <div class="col  offers">
           <a href="offers/offers.html">
             <pre> </i>             offers          <span>>>></span></pre>
           </a>
 
 
-        </div> -->
+        </div>
       </div>
     </div>
 
