--- a/offers/offers.html
+++ b/offers/offers.html
@@ -1,58 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>مرجان للمأكولات البحرية >> offers</title>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>عروض كشري وكريب أفندينا</title>
 
-    <link rel="stylesheet" href="all.min.css" />
-    <link rel="stylesheet" href="offers.css" />
-    <link rel="stylesheet" href="nornalize.css" />
-  </head>
-  <body>
-    <!--start header-->
-    <!--start header-->
-    <!--start header-->
-    <div class="header">
-      <div class="container">
-        <div class="logo"><img src="../image/logo.jpg" alt="" /></div>
-        <div class="name">
-         <h1>   مرجان    </h1>
-        </div>
+  <!-- أيقونة واتساب من Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- خط Cairo العربي الاحترافي -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
+  <!-- ملف CSS مخصص -->
+  <link rel="stylesheet" href="offers.css" />
+</head>
+<body>
+
+  <!-- الهيدر -->
+  <div class="header">
+    <div class="container">
+      <div class="logo">
+        <img src="/image/logo.jpeg" alt="لوجو أفندينا" />
+      </div>
+      <div class="name">
+        <h1>أفندينا</h1>
       </div>
     </div>
+  </div>
 
-    <div class="title">
-      <div class="container">
-        <div class="text">The Offers</div>
-      </div>
+  <!-- العنوان -->
+  <div class="title">
+    <div class="container">
+      <div class="text"> offers  </div>
     </div>
+  </div>
 
-    <!-- start  offer -->
-    <!-- start  offer -->
+  <!-- العروض -->
+  <div class="offer">
+    <div class="container">
+      <p>#كشري_وكريب_افندينا
+#اقوي عروض الكشري 😋 والطواجن وصلت جاهز نفسك لوجبات جامده 🔥 بمناسبه راس السنه العرض ساري ل اول يوم في السنه الجديده
+(1) اي 3 علب ب 25 عليهم علبه هديه 🎁
+(2) 3 علب ب 40 عليهم علبه هديه + 1 عيش توست + 1 سلطه 🔥
+(3) اي 5 علب عليهم 1 عيش توست + سلطه + واحده ببسي هديه
+عروض الطواجن
+(3) اي 3 طواجن عليهم علبه كشري هديه 💥
+(4) اي 3 طواجن موتزاريلا عليهم علبه كشري + 1 عيش توست + سلطه 🔥
+(5) اي 3 كريب عليهم 1 سوري بطاطس هديه + واحده ببسي هديه 🎁
+(6) اي اوردر توصيل ب 200 جنيه التوصيل عليه خصم 50٪ 👌🏻🔥
+(7) عروض الصاله مفاجأة 🔥🔥🔥
+#افندينا_ملك_العروض
+للتواصل علي الارقام الاتية</p>
 
+      <img src="image/1 (1).jpeg" alt="صورة العروض" />
+    </div>
+  </div>
 
+  <!-- زر الطلب عالواتساب -->
+  <div class="click">
+    <div class="container">
+      <div class="text">لطلب العروض </div>
+      <a href="https://api.whatsapp.com/send?phone=201091858436&text=مرحبا%20أفندينا%2C%20أريد%20الاستفادة%20من%20العروض%20🎉">
+        <i class="fab fa-whatsapp"></i> اضغط هنا للطلب
+      </a>
+    </div>
+  </div>
 
-            <div class="offer">
-                <div class="container">
-                  <img src="image/1 (1).jpg" alt="">
-<img src="image/1 (2).jpeg" alt="">
-
-
-
-
-
-                </div>
-      <!--start click-->
-
-<div class="click">
-         <div class="container">
-        <form >
-          <div class="text">لطلب  العروض</div>
-
-          <a href="https://api.whatsapp.com/send?phone=201009260826 " >اضغط هناااا</a >
-        </form>
-      </div>
-      </div>
-  </body>
+</body>
 </html>
