--- a/offers/offers.html
+++ b/offers/offers.html
@@ -19,7 +19,7 @@
   <div class="header">
     <div class="container">
       <div class="logo">
-        <img src="/image/logo.jpeg" alt="لوجو أفندينا" />
+        <img src="../image/logo.jpeg" alt="لوجو أفندينا" />
       </div>
       <div class="name">
         <h1>أفندينا</h1>
