--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
         </div> -->
         <!-- <br> -->
-                    <div class="col  offers">
+                    <!-- <div class="col  offers">
           <a href="offers/offers.html">
             <pre> </i>             offers          <span>>>></span></pre>
-          </a>
-
+          </a> -->
+          
 
         </div>
       </div>
